litellm/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: litellm
spec:
  host: litellm.baloise.dev
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: litellm
    weight: 100
